--- a/package.json
+++ b/package.json
@@ -10,42 +10,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@orbitdb/quickstart": "^1.0.0",
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@orbitdb/core": "^2.2.0",
+    "@orbitdb/quickstart": "^1.0.0",
     "abstract-level": "^2.0.0",
     "blockstore-level": "^1.1.8",
     "browser-level": "^1.0.1",
     "framer-motion": "^11.2.11",
     "helia": "^4.2.4",
     "level": "^8.0.1",
+    "libp2p": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "path-browserify": "^1.0.1",
-    "playwright-test": "^14.0.0",
-    "rimraf": "^5.0.5",
-    "standard": "^17.1.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "mocha": "^10.2.0",
+    "path-browserify": "^1.0.1",
+    "playwright-test": "^14.0.0",
+    "rimraf": "^5.0.5",
+    "standard": "^17.1.0",
+    "tailwindcss": "^3.4.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
