--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "level": "^8.0.1",
     "libp2p": "^1.8.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
